@@ -130,114 +130,15 @@ void info_session (REFERENCE **ref_list, char *user_filename, char *error);
 extern void initialize_terminal_and_keymaps (char *init_file);
 extern REFERENCE *info_intuit_options_node (NODE *initial_node, char *program);
 
-/* Moving the point within a node. */
-extern void info_next_line (WINDOW *window, int count, int key);
-extern void info_prev_line (WINDOW *window, int count, int key);
-extern void info_end_of_line (WINDOW *window, int count, int key);
-extern void info_beginning_of_line (WINDOW *window, int count, int key);
-extern void info_forward_char (WINDOW *window, int count, int key);
-extern void info_backward_char (WINDOW *window, int count, int key);
-extern void info_forward_word (WINDOW *window, int count, int key);
-extern void info_backward_word (WINDOW *window, int count, int key);
-extern void info_beginning_of_node (WINDOW *window, int count, int key);
-extern void info_end_of_node (WINDOW *window, int count, int key);
-extern void info_move_to_prev_xref (WINDOW *window, int count, int key);
-extern void info_move_to_next_xref (WINDOW *window, int count, int key);
+void info_scroll_forward (WINDOW *window, int count, int key);
+void info_abort_key (WINDOW *window, int count, int key);
 
-/* Scrolling text within a window. */
-extern void info_scroll_forward (WINDOW *window, int count, int key);
-extern void info_scroll_backward (WINDOW *window, int count, int key);
-extern void info_redraw_display (WINDOW *window, int count, int key);
-extern void info_toggle_wrap (WINDOW *window, int count, int key);
-extern void info_toggle_regexp (WINDOW *window, int count, int key);
-extern void info_move_to_window_line (WINDOW *window, int count,
-    int key);
-extern void info_up_line (WINDOW *window, int count, int key);
-extern void info_down_line (WINDOW *window, int count, int key);
-extern void info_scroll_half_screen_down (WINDOW *window, int count, int key);
-extern void info_scroll_half_screen_up (WINDOW *window, int count, int key);
-extern void info_scroll_forward_set_window (WINDOW *window, int count, int key);
-extern void info_scroll_forward_page_only (WINDOW *window, int count, int key);
-extern void info_scroll_forward_page_only_set_window (WINDOW *window, int count,
-    int key);
-extern void info_scroll_backward_set_window (WINDOW *window, int count,
-    int key);
-extern void info_scroll_backward_page_only (WINDOW *window, int count,
-    int key);
-extern void info_scroll_backward_page_only_set_window (WINDOW *window, int count,
-    int key);
-extern void info_scroll_other_window_backward (WINDOW *window, int count,
-    int key);
-
-/* Manipulating multiple windows. */
-extern void info_split_window (WINDOW *window, int count, int key);
-extern void info_delete_window (WINDOW *window, int count, int key);
-extern void info_keep_one_window (WINDOW *window, int count, int key);
-extern void info_grow_window (WINDOW *window, int count, int key);
-extern void info_scroll_other_window (WINDOW *window, int count, int key);
-extern void info_tile_windows (WINDOW *window, int count, int key);
-extern void info_next_window (WINDOW *window, int count, int key);
-extern void info_prev_window (WINDOW *window, int count, int key);
-
-/* Selecting nodes. */
-extern void info_next_node (WINDOW *window, int count, int key);
-extern void info_prev_node (WINDOW *window, int count, int key);
-extern void info_up_node (WINDOW *window, int count, int key);
-extern void info_last_node (WINDOW *window, int count, int key);
-extern void info_first_node (WINDOW *window, int count, int key);
-extern void info_history_node (WINDOW *window, int count, int key);
-extern void info_goto_node (WINDOW *window, int count, int key);
-extern void info_goto_invocation_node (WINDOW *window, int count, int key);
-extern void info_top_node (WINDOW *window, int count, int key);
-extern void info_dir_node (WINDOW *window, int count, int key);
-extern void info_global_next_node (WINDOW *window, int count, int key);
-extern void info_global_prev_node (WINDOW *window, int count, int key);
-extern void info_kill_node (WINDOW *window, int count, int key);
-extern void info_view_file (WINDOW *window, int count, int key);
-extern void info_menu_sequence (WINDOW *window, int count, int key);
-extern NODE *info_follow_menus (NODE *initial_node, char **menus,
-				char **error_msg, int strict);
-extern void info_man (WINDOW *window, int count, int key);
-extern void list_visited_nodes (WINDOW *window, int count, int key);
-extern void select_visited_node (WINDOW *window, int count, int key);
-
-/* Selecting cross references. */
-extern void info_menu_digit (WINDOW *window, int count, int key);
-extern void info_menu_item (WINDOW *window, int count, int key);
-extern void info_xref_item (WINDOW *window, int count, int key);
-extern void info_find_menu (WINDOW *window, int count, int key);
-extern void info_select_reference_this_line (WINDOW *window, int count,
-    int key);
-extern void info_last_menu_item (WINDOW *window, int count, int key);
-extern void info_visit_menu (WINDOW *window, int count, int key);
+NODE *info_follow_menus (NODE *initial_node, char **menus,
+                         char **error_msg, int strict);
 
 /* Adding numeric arguments. */
 extern int info_explicit_arg, info_numeric_arg, info_numeric_arg_sign;
 extern int ea_explicit_arg, ea_numeric_arg, ea_numeric_arg_sign;
-
-extern void info_add_digit_to_numeric_arg (WINDOW *window, int count, int key);
-extern void info_universal_argument (WINDOW *window, int count, int key);
 extern void info_initialize_numeric_arg (void);
-extern void info_numeric_arg_digit_loop (WINDOW *window, int count, int key);
-
-/* Searching commands. */
-extern void info_search (WINDOW *window, int count, int key);
-extern void isearch_forward (WINDOW *window, int count, int key);
-extern void isearch_backward (WINDOW *window, int count, int key);
-extern void info_search_case_sensitively (WINDOW *window, int count, int key);
-extern void info_search_backward (WINDOW *window, int count, int key);
-extern void info_search_next (WINDOW *window, int count, int key);
-extern void info_search_previous (WINDOW *window, int count, int key);
-
-/* Dumping and printing nodes. */
-extern void info_print_node (WINDOW *window, int count, int key);
-
-/* Footnotes.  */
-extern void info_show_footnotes (WINDOW *window, int count, int key);
-
-/* Miscellaneous commands. */
-extern void info_abort_key (WINDOW *window, int count, int key);
-extern void info_quit (WINDOW *window, int count, int key);
-extern void info_do_lowercase_version (WINDOW *window, int count, int key);
 
 #endif /* not SESSION_H */
